# Golden-Ridge

./: README.md
Golden Ridge/wheelchair/move_base/: CMakeLists.txt
Golden Ridge/wheelchair/move_base/src/: diff_trans.cpp  serial.cpp
Golden Ridge/wheelchair_ws/devel/: .catkin  .rosinstall  setup.sh
Golden Ridge/wheelchair_ws/devel/lib/amcl/: amcl
Golden Ridge/wheelchair_ws/install/: .rosinstall  setup.sh
Golden Ridge/wheelchair_ws/src/obstacle_detection_1/: CMakeLists.txt
Golden Ridge/wheelchair_ws/src/obstacle_detection_1/src/: obstacle_scan.cpp  scan_filter.cpp
Golden Ridge/wheelchair_ws/src/turtlebot3_launch_remote/: CMakeLists.txt  turtlebot3_remote.launch
Golden Ridge/wheelchair_ws/src/wheelchair_control/: package.xml
Golden Ridge/wheelchair_ws/src/wheelchair_description/: CMakeLists.txt  package.xml
Golden Ridge/wheelchair_ws/src/wheelchair_navigation/: CMakeLists.txt
Golden Ridge/wheelchairhzz_ws/: copy  cv2  glob  os  rospy  tf  time
Golden Ridge/wheelchairhzz_ws/devel/: .catkin  .rosinstall  setup.sh
Golden Ridge/wheelchairhzz_ws/src/cmd_selector/: CMakeLists.txt
Golden Ridge/wheelchairhzz_ws/src/obstacle_detection/: package.xml
Golden Ridge/wheelchairhzz_ws/src/turtlebot3_launch_remote/: turtlebot3_remote.launch
Golden Ridge/wheelchairhzz_ws/src/wheelchair_control/: CMakeLists.txt
Golden Ridge/wheelchairhzz_ws/src/wheelchair_gazebo/: CMakeLists.txt
Golden Ridge/wheelchairhzz_ws/src/wheelchair_launch/: CMakeLists.txt  package.xml  wheelchair_overall.launch
Golden Ridge/wheelchairhzz_ws/src/wheelchair_navigation/: package.xml
(+236 files in other folders)
